--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<div class="background"></div>
 <div class="navbar">
 <ul>
-	<li>HOME</li>
-	<li>SIGN UP</li>
-	<li>LOG IN</li>
+	<li><a href=#>home</a></li>
+	<li><a href=#>sign up</a></li>
+	<li><a href=#>log in</a></li>
 </ul>
 </div>
 <div class="login">
-
+	<h2>LOGIN</h2>
+	<form action="#">
+		<label for="username">Username:</label>
+		<input type="text" name="username" id="username">
+		<label for="password">Password:</label>
+		<input type="password" name="password" id="password">
+		<label for="keep-session">Keep me logged in</label>
+		<input type="checkbox" name="keep-session" id="keep-session">
+		<input type="submit" value="Submit" >
+	</form>
+	<a href="#">Forgot password?</a>
+	<a href="#">Register</a>
 </div>
 </body>
 </html>
