add shadow effects to navbar and login form

--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 </ul>
 </div>
 <div class="login">
-	<h2>LOGIN</h2>
-	<form action="#">
-		<label for="username">Username:</label>
-		<input type="text" name="username" id="username">
-		<label for="password">Password:</label>
-		<input type="password" name="password" id="password">
-		<label for="keep-session">Keep me logged in</label>
-		<input type="checkbox" name="keep-session" id="keep-session">
-		<input type="submit" value="Submit" >
-	</form>
-	<a href="#">Forgot password?</a>
-	<a href="#">Register</a>
+	<div class="login-bg">
+		<h2>LOGIN</h2>
+		<form action="#">
+			<label for="username">Username:</label>
+			<input type="text" name="username" id="username">
+			<label for="password">Password:</label>
+			<input type="password" name="password" id="password">
+			<label for="keep-session">Keep me logged in</label>
+			<input type="checkbox" name="keep-session" id="keep-session">
+			<input type="submit" value="Submit" >
+		</form>
+		<a href="#">Forgot password?</a>
+		<a href="#">Register</a>
+	</div>
 </div>
 </body>
 </html>
