fix the login form even further

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 </ul>
 </div>
 <div class="login">
-	<div class="login-bg">
+<!-- 	<div class="login-bg">
+	</div> -->
 		<h2>LOGIN</h2>
+		<hr>
 		<form action="#">
 			<label for="username">Username:</label>
 			<input type="text" name="username" id="username">
@@ -25,9 +27,9 @@
 			<input type="checkbox" name="keep-session" id="keep-session">
 			<input type="submit" value="Submit" >
 		</form>
+		<hr>
 		<a href="#">Forgot password?</a>
 		<a href="#">Register</a>
-	</div>
 </div>
 </body>
 </html>
